y.output

state 0
	$accept: .program $end 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	program  goto 1
	expr  goto 2
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  expr.    (1)
	math:  expr.'+' expr 
	math:  expr.'-' expr 
	math:  expr.'*' expr 
	math:  expr.'/' expr 
	math:  expr.'%' expr 
	logic:  expr._EQL expr 
	logic:  expr._NEQ expr 
	logic:  expr._LSS expr 
	logic:  expr._GTR expr 
	logic:  expr._LEQ expr 
	logic:  expr._GEQ expr 
	logic:  expr._AND expr 
	logic:  expr._OR expr 
	bitManipulation:  expr.'|' expr 
	bitManipulation:  expr.'&' expr 
	bitManipulation:  expr.'^' expr 
	bitManipulation:  expr._SHL expr 
	bitManipulation:  expr._SHR expr 
	varAccess:  expr.'.' _IDENT 
	varAccess:  expr.'[' expr ']' 
	varAccess:  expr._IN expr 
	varAccess:  expr.'[' expr ':' expr ']' 
	varAccess:  expr.'[' ':' expr ']' 
	varAccess:  expr.'[' expr ':' ']' 
	varAccess:  expr.'[' ':' ']' 

	_AND  shift 30
	_OR  shift 31
	_EQL  shift 24
	_NEQ  shift 25
	_LSS  shift 26
	_GTR  shift 27
	_LEQ  shift 28
	_GEQ  shift 29
	_SHL  shift 35
	_SHR  shift 36
	_IN  shift 39
	'|'  shift 32
	'^'  shift 34
	'&'  shift 33
	'+'  shift 19
	'-'  shift 20
	'*'  shift 21
	'/'  shift 22
	'%'  shift 23
	'.'  shift 37
	'['  shift 38
	.  reduce 1 (src line 63)


state 3
	expr:  literal.    (2)

	.  reduce 2 (src line 71)


state 4
	expr:  math.    (3)

	.  reduce 3 (src line 73)


state 5
	expr:  logic.    (4)

	.  reduce 4 (src line 74)


state 6
	expr:  bitManipulation.    (5)

	.  reduce 5 (src line 75)


state 7
	expr:  varAccess.    (6)

	.  reduce 6 (src line 76)


state 8
	expr:  '('.expr ')' 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 40
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 9
	expr:  _IDENT.'(' ')' 
	expr:  _IDENT.'(' exprList ')' 
	varAccess:  _IDENT.    (39)

	'('  shift 41
	.  reduce 39 (src line 123)


state 10
	literal:  _LITERAL_NIL.    (10)

	.  reduce 10 (src line 82)


state 11
	literal:  _LITERAL_BOOL.    (11)

	.  reduce 11 (src line 84)


state 12
	literal:  _LITERAL_NUMBER.    (12)

	.  reduce 12 (src line 85)


state 13
	literal:  _LITERAL_STRING.    (13)

	.  reduce 13 (src line 86)


state 14
	literal:  '['.']' 
	literal:  '['.exprList ']' 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	']'  shift 42
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 44
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7
	exprList  goto 43

state 15
	literal:  '{'.'}' 
	literal:  '{'.exprMap '}' 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	'}'  shift 45
	.  error

	expr  goto 47
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7
	exprMap  goto 46

state 16
	math:  '-'.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 48
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 17
	logic:  '!'.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 49
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 18
	bitManipulation:  _BIT_NOT.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 50
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 19
	math:  expr '+'.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 51
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 20
	math:  expr '-'.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 52
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 21
	math:  expr '*'.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 53
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 22
	math:  expr '/'.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 54
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 23
	math:  expr '%'.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 55
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 24
	logic:  expr _EQL.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 56
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 25
	logic:  expr _NEQ.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 57
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 26
	logic:  expr _LSS.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 58
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 27
	logic:  expr _GTR.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 59
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 28
	logic:  expr _LEQ.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 60
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 29
	logic:  expr _GEQ.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 61
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 30
	logic:  expr _AND.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 62
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 31
	logic:  expr _OR.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 63
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 32
	bitManipulation:  expr '|'.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 64
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 33
	bitManipulation:  expr '&'.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 65
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 34
	bitManipulation:  expr '^'.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 66
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 35
	bitManipulation:  expr _SHL.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 67
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 36
	bitManipulation:  expr _SHR.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 68
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 37
	varAccess:  expr '.'._IDENT 

	_IDENT  shift 69
	.  error


state 38
	varAccess:  expr '['.expr ']' 
	varAccess:  expr '['.expr ':' expr ']' 
	varAccess:  expr '['.':' expr ']' 
	varAccess:  expr '['.expr ':' ']' 
	varAccess:  expr '['.':' ']' 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	':'  shift 71
	.  error

	expr  goto 70
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 39
	varAccess:  expr _IN.expr 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	'{'  shift 15
	.  error

	expr  goto 72
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7

state 40
	expr:  '(' expr.')' 
	math:  expr.'+' expr 
	math:  expr.'-' expr 
	math:  expr.'*' expr 
	math:  expr.'/' expr 
	math:  expr.'%' expr 
	logic:  expr._EQL expr 
	logic:  expr._NEQ expr 
	logic:  expr._LSS expr 
	logic:  expr._GTR expr 
	logic:  expr._LEQ expr 
	logic:  expr._GEQ expr 
	logic:  expr._AND expr 
	logic:  expr._OR expr 
	bitManipulation:  expr.'|' expr 
	bitManipulation:  expr.'&' expr 
	bitManipulation:  expr.'^' expr 
	bitManipulation:  expr._SHL expr 
	bitManipulation:  expr._SHR expr 
	varAccess:  expr.'.' _IDENT 
	varAccess:  expr.'[' expr ']' 
	varAccess:  expr._IN expr 
	varAccess:  expr.'[' expr ':' expr ']' 
	varAccess:  expr.'[' ':' expr ']' 
	varAccess:  expr.'[' expr ':' ']' 
	varAccess:  expr.'[' ':' ']' 

	_AND  shift 30
	_OR  shift 31
	_EQL  shift 24
	_NEQ  shift 25
	_LSS  shift 26
	_GTR  shift 27
	_LEQ  shift 28
	_GEQ  shift 29
	_SHL  shift 35
	_SHR  shift 36
	_IN  shift 39
	'|'  shift 32
	'^'  shift 34
	'&'  shift 33
	'+'  shift 19
	'-'  shift 20
	'*'  shift 21
	'/'  shift 22
	'%'  shift 23
	'.'  shift 37
	'['  shift 38
	')'  shift 73
	.  error


state 41
	expr:  _IDENT '('.')' 
	expr:  _IDENT '('.exprList ')' 

	_LITERAL_NIL  shift 10
	_LITERAL_BOOL  shift 11
	_LITERAL_NUMBER  shift 12
	_LITERAL_STRING  shift 13
	_IDENT  shift 9
	_BIT_NOT  shift 18
	'-'  shift 16
	'!'  shift 17
	'['  shift 14
	'('  shift 8
	')'  shift 74
	'{'  shift 15
	.  error

	expr  goto 44
	literal  goto 3
	math  goto 4
	logic  goto 5
	bitManipulation  goto 6
	varAccess  goto 7
	exprList  goto 75

state 42
	literal:  '[' ']'.    (14)

	.  reduce 14 (src line 87)


state 43
	literal:  '[' exprList.']' 
	exprList:  exprList.',' expr 

	']'  shift 76
	','  shift 77
	.  error


state 44
	math:  expr.'+' expr 
	math:  expr.'-' expr 
	math:  expr.'*' expr 
	math:  expr.'/' expr 
	math:  expr.'%' expr 
	logic:  expr._EQL expr 
	logic:  expr._NEQ expr 
	logic:  expr._LSS expr 
	logic:  expr._GTR expr 
	logic:  expr._LEQ expr 
	logic:  expr._GEQ expr 
	logic:  expr._AND expr 
	logic:  expr._OR expr 
	bitManipulation:  expr.'|' expr 
	bitManipulation:  expr.'&' expr 
	bitManipulation:  expr.'^' expr 
	bitManipulation:  expr._SHL expr 
	bitManipulation:  expr._SHR expr 
	varAccess:  expr.'.' _IDENT 
	varAccess:  expr.'[' expr ']' 
	varAccess:  expr._IN expr 
	varAccess:  expr.'[' expr ':' expr ']' 
	varAccess:  expr.'[' ':' expr ']' 
	varAccess:  expr.'[' expr ':' ']' 
	varAccess:  expr.'[' ':' ']' 
	exprList:  expr.    (47)

	_AND  shift 30
	_OR  shift 31
	_EQL  shift 24
	_NEQ  shift 25
	_LSS  shift 26
	_GTR  shift 27
	_LEQ  shift 28
	_GEQ  shift 29
	_SHL  shift 35
	_SHR  shift 36
	_IN  shift 39
	'|'  shift 32
	'^'  shift 34
	'&'  shift 33
	'+'  shift 19
	'-'  shift 20
	'*'  shift 21
	'/'  shift 22
	'%'  shift 23
	'.'  shift 37
	'['  shift 38
	.  reduce 47 (src line 134)


state 45
	literal:  '{' '}'.    (16)

	.  reduce 16 (src line 89)


state 46
	literal:  '{' exprMap.'}' 
	exprMap:  exprMap.',' expr ':' expr 

	'}'  shift 78
	','  shift 79
	.  error


state 47
	math:  expr.'+' expr 
	math:  expr.'-' expr 
	math:  expr.'*' expr 
	math:  expr.'/' expr 
	math:  expr.'%' expr 
	logic:  expr._EQL expr 
	logic:  expr._NEQ expr 
	logic:  expr._LSS expr 
	logic:  expr._GTR expr 
	logic:  expr._LEQ expr 
	logic:  expr._GEQ expr 
	logic:  expr._AND expr 
	logic:  expr._OR expr 
	bitManipulation:  expr.'|' expr 
	bitManipulation:  expr.'&' expr 
	bitManipulation:  expr.'^' expr 
	bitManipulation:  expr._SHL expr 
	bitManipulation:  expr._SHR expr 
	varAccess:  expr.'.' _IDENT 
	varAccess:  expr.'[' expr ']' 
	varAccess:  expr._IN expr 
	varAccess:  expr.'[' expr ':' expr ']' 
	varAccess:  expr.'[' ':' expr ']' 
	varAccess:  expr.'[' expr ':' ']' 
	varAccess:  expr.'[' ':' ']' 
	exprMap:  expr.':' expr 

	_AND  shift 30
	_OR  shift 31
	_EQL  shift 24
	_NEQ  shift 25
	_LSS  shift 26
	_GTR  shift 27
	_LEQ  shift 28
	_GEQ  shift 29
	_SHL  shift 35
	_SHR  shift 36
	_IN  shift 39
	'|'  shift 32
	'^'  shift 34
	'&'  shift 33
	'+'  shift 19
	'-'  shift 20
	'*'  shift 21
	'/'  shift 22
	'%'  shift 23
	'.'  shift 37
	'['  shift 38
	':'  shift 80
	.  error


state 48
	math:  '-' expr.    (18)
	math:  expr.'+' expr 
	math:  expr.'-' expr 
	math:  expr.'*' expr 
	math:  expr.'/' expr 
	math:  expr.'%' expr 
	logic:  expr._EQL expr 
	logic:  expr._NEQ expr 
	logic:  expr._LSS expr 
	logic:  expr._GTR expr 
	logic:  expr._LEQ expr 
	logic:  expr._GEQ expr 
	logic:  expr._AND expr 
	logic:  expr._OR expr 
	bitManipulation:  expr.'|' expr 
	bitManipulation:  expr.'&' expr 
	bitManipulation:  expr.'^' expr 
	bitManipulation:  expr._SHL expr 
	bitManipulation:  expr._SHR expr 
	varAccess:  expr.'.' _IDENT 
	varAccess:  expr.'[' expr ']' 
	varAccess:  expr._IN expr 
	varAccess:  expr.'[' expr ':' expr ']' 
	varAccess:  expr.'[' ':' expr ']' 
	varAccess:  expr.'[' expr ':' ']' 
	varAccess:  expr.'[' ':' ']' 

	_IN  shift 39
	'.'  shift 37
	'['  shift 38
	.  reduce 18 (src line 93)


state 49
	math:  expr.'+' expr 
	math:  expr.'-' expr 
	math:  expr.'*' expr 
	math:  expr.'/' expr 
	math:  expr.'%' expr 
	logic:  '!' expr.    (24)
	logic:  expr._EQL expr 
	logic:  expr._NEQ expr 
	logic:  expr._LSS expr 
	logic:  expr._GTR expr 
	logic:  expr._LEQ expr 
	logic:  expr._GEQ expr 
	logic:  expr._AND expr 
	logic:  expr._OR expr 
	bitManipulation:  expr.'|' expr 
	bitManipulation:  expr.'&' expr 
	bitManipulation:  expr.'^' expr 
	bitManipulation:  expr._SHL expr 
	bitManipulation:  expr._SHR expr 
	varAccess:  expr.'.' _IDENT 
	varAccess:  expr.'[' expr ']' 
	varAccess:  expr._IN expr 
	varAccess:  expr.'[' expr ':' expr ']' 
	varAccess:  expr.'[' ':' expr ']' 
	varAccess:  expr.'[' expr ':' ']' 
	varAccess:  expr.'[' ':' ']' 

	_IN  shift 39
	'.'  shift 37
	'['  shift 38
	.  reduce 24 (src line 102)


state 50
	math:  expr.'+' expr 
	math:  expr.'-' expr 
	math:  expr.'*' expr 
	math:  expr.'/' expr 
	math:  expr.'%' expr 
	logic:  expr._EQL expr 
	logic:  expr._NEQ expr 
	logic:  expr._LSS expr 
	logic:  expr._GTR expr 
	logic:  expr._LEQ expr 
	logic:  expr._GEQ expr 
	logic:  expr._AND expr 
	logic:  expr._OR expr 
	bitManipulation:  expr.'|' expr 
	bitManipulation:  expr.'&' expr 
	bitManipulation:  expr.'^' expr 
	bitManipulation:  expr._SHL expr 
	bitManipulation:  expr._SHR expr 
	bitManipulation:  _BIT_NOT expr.    (38)
	varAccess:  expr.'.' _IDENT 
	varAccess:  expr.'[' expr ']' 
	varAccess:  expr._IN expr 
	varAccess:  expr.'[' expr ':' expr ']' 
	varAccess:  expr.'[' ':' expr ']' 
	varAccess:  expr.'[' expr ':' ']' 
	varAccess:  expr.'[' ':' ']' 

	_IN  shift 39
	'.'  shift 37
	'['  shift 38
	.  reduce 38 (src line 120)


state 51
	math:  expr.'+' expr 
	math:  expr '+' expr.    (19)
	math:  expr.'-' expr 
	math:  expr.'*' expr 
	math:  expr.'/' expr 
	math:  expr.'%' expr 
	logic:  expr._EQL expr 
	logic:  expr._NEQ expr 
	logic:  expr._LSS expr 
	logic:  expr._GTR expr 
	logic:  expr._LEQ expr 
	logic:  expr._GEQ expr 
	logic:  expr._AND expr 
	logic:  expr._OR expr 
	bitManipulation:  expr.'|' expr 
	bitManipulation:  expr.'&' expr 
	bitManipulation:  expr.'^' expr 
	bitManipulation:  expr._SHL expr 
	bitManipulation:  expr._SHR expr 
	varAccess:  expr.'.' _IDENT 
	varAccess:  expr.'[' expr ']' 
	varAccess:  expr._IN expr 
	varAccess:  expr.'[' expr ':' expr ']' 
	varAccess:  expr.'[' ':' expr ']' 
	varAccess:  expr.'[' expr ':' ']' 
	varAccess:  expr.'[' ':' ']' 

	_IN  shift 39
	'*'  shift 21
	'/'  shift 22
	'%'  shift 23
	'.'  shift 37
	'['  shift 38
	.  reduce 19 (src line 95)


state 52
	math:  expr.'+' expr 
	math:  expr.'-' expr 
	math:  expr '-' expr.    (20)
	math:  expr.'*' expr 
	math:  expr.'/' expr 
	math:  expr.'%' expr 
	logic:  expr._EQL expr 
	logic:  expr._NEQ expr 
	logic:  expr._LSS expr 
	logic:  expr._GTR expr 
	logic:  expr._LEQ expr 
	logic:  expr._GEQ expr 
	logic:  expr._AND expr 
	logic:  expr._OR expr 
	bitManipulation:  expr.'|' expr 
	bitManipulation:  expr.'&' expr 
	bitManipulation:  expr.'^' expr 
	bitManipulation:  expr._SHL expr 
	bitManipulation:  expr._SHR expr 
	varAccess:  expr.'.' _IDENT 
	varAccess:  expr.'[' expr ']' 
	varAccess:  expr._IN expr 
	varAccess:  expr.'[' expr ':' expr ']' 
	varAccess:  expr.'[' ':' expr ']' 
	varAccess:  expr.'[' expr ':' ']' 
	varAccess:  expr.'[' ':' ']' 

	_IN  shift 39
	'*'  shift 21
	'/'  shift 22
	'%'  shift 23
	'.'  shift 37
	'['  shift 38
	.  reduce 20 (src line 96)

